--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="myscript.js"></script>
+    <script src="js/myscript.js"></script>
 </head>
 <body>
 <h1>Mi primera web </h1>
