añadidos links e imagenes practica de html

--- a/html/contacta.html
+++ b/html/contacta.html
@@ -9,5 +9,17 @@
 </head>
 <body>
    <h1>Contacta</h1> 
+<!-- ruta en la misma carpeta -->
+<p>1. En la misma carpeta</p>
+   <img src="gato.jpg" alt="gato">
+   <!-- ruta en la carpeta img -->
+   <p>2. En la carpeta img (un nivel)</p>
+   <img src="./gato.jpg" alt="gato">
+   <!-- ruta en la carpeta padre -->
+   <p>3. En la carpeta raíz</p>
+   <img src="gato.jpg" alt="gato">
+   <!-- ruta en la carpeta padre -->
+   <p>4. Subir dos niveles</p>
+   <img src="../gato.jpg" alt="gato">
 </body>
 </html>
