cambios en aula uoc 21 enero

--- a/html2/contacta.html
+++ b/html2/contacta.html
@@ -21,7 +21,7 @@
    <!-- ruta en la misma carpeta -->
    <p>2. En la carpeta img (un nivel)</p>
    <!-- añadido enlace a la foto -->
-   <a href="https://es.wikipedia.org/wiki/Historia_del_gato" target:_blank">
+   <a href="https://es.wikipedia.org/wiki/Historia_del_gato" target:_blank>
       <img src="img/gato.jpg" alt="gato">
    </a>
 </body>
