--- a/html2/index.html
+++ b/html2/index.html
@@ -17,15 +17,54 @@
         </ul>
     </main>
     <div>
+        <p><a href="#sorpresa" id="volver">Ir a la sorpresa</a></p>
         <!-- añadida una imagen -->
-        <h1>Mundo gatuno </h1>
+        <h1>Mundo gatuno 😼😽😾 </h1>
         <h2>Intro</h2>
         <img src="img/collage-gatos.jpg" alt="collage" style="width: 804px;float:left">
     </div>
     <div>
-        <img src="img/gato.jpg" alt="gatos" style="width: 400px; height: 400px; object-fit: cover">
+        <a href="https://www.eljardinetdelsgats.org/es/" target="_blank"><img src="img/gato.jpg" alt="gatos" style="width: 400px; height: 400px; object-fit: cover"></a>
         <img src="img/meme-gatos.jpg" alt="meme" style="width: 400px; height: 400px; object-fit: cover">
         <img src="img/siames.jpg" alt="siames" style="width: 400px; height: 400px; object-fit: cover">
+        <img src="img/grupo-gatos.jpg" alt="siames" style="width: 400px; height: 400px; object-fit: cover">
+    </div>
+    <!-- trabajo con anclas -->
+    <h2>SEGUNDA PARTE DE LA WEB</h2>
+    <div>
+        <img src="img/gatito.jpg" alt="gatito">
+        <h3> <a href="#volver" id="sorpresa">¡Aquí estoy! 🐱</a></h3>
+    </div>
+    <!-- Trabajo con iframes -->
+    <div>
+        <iframe width="800" height="600" src="https://www.youtube.com/embed/n56jRytFkyw" title="Vídeo de Youtube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+    <div>
+        <h3>Adopta un gato</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.7810025881727!2d2.1715971509899346!3d41.37884250438607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a258a03f339d%3A0xca5503d73d89768!2sEl%20Jardinet%20dels%20Gats!5e0!3m2!1ses!2ses!4v1642763944799!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <!-- Ejercicio tablas -->
+    <div>
+        <h3>Tabla</h3>
+     <table style="border:1px solid black; border-collapse: collapse";>
+        <tr>
+            <td colspan="2" >1</td>
+            <td rowspan="3">2</td>
+            <td>3</td>
+            <td rowspan="2">4</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td colspan="2">9</td>
+            <td>10</td>
+            <td>11</td>
+        </tr>
+     </table>   
     </div>
 </body>
 </html>
