ejercicios css y web semantica

--- a/html/libre.html
+++ b/html/libre.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Libre</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
- <h1>Libre</h1>   
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header style="border: 1px solid; color: #000">
+      <h1>Aquí va el header</h1>
+    </header>
+    <nav style="border: 1px solid; color: #000">
+      <ul>
+        <li>menu 01</li>
+        <li>menu 02</li>
+        <li>menu 03</li>
+        <li>menu 04</li>
+      </ul>
+    </nav>
+    <section style="border: 1px solid; color: #000">
+      <h2>Sección</h2>
+    </section>
+    <article style="border: 1px solid; color: #000">
+        <h2>Arículo blog</h2>
+    </article>
+    <aside style="border: 1px solid; color: #000">
+        <h2>Aside</h2>
+    </aside>
+    <footer style="border: 1px solid; color: #000">
+        <lul>
+            <li>footer 01</li>
+            <li>footer 02</li>
+            <li>footer 03</li>
+            <li>footer 04</li>
+        </li>
+    </footer>
+  </body>
 </html>
