--- a/html2/contacta.html
+++ b/html2/contacta.html
@@ -74,7 +74,7 @@
          <label for="adreca">Adreça:</label>
          <input type="text" id="adreca" name="adreca" placeholder="La teva adreça">
          <label for="numero">Número:</label>
-         <input type="text" id="numero" name="numero" placeholder="El número" pattern="[1]"><br><br>
+         <input type="number" id="numero" name="numero" placeholder="El número" max="50000"><br><br>
          <label for="pis">Pis:</label>
          <input type="text" id="pis" name="pis" placeholder="El pis">
          <label for="porta">Porta:</label>
