--- a/html2/libre.html
+++ b/html2/libre.html
@@ -8,13 +8,37 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-        <ul>
+    <body>
+        <header style="border: 1px solid; color: #000">
+          <h1>Aquí va el header</h1>
+        </header>
+        <nav style="border: 1px solid; color: #000">
+          <ul>
             <li> <a href="presentacion.html" target="_blank">Presentación</a></li>
-            <li> <a href="contacta.html">Contacta</a></li>
-            <li> <a href="libre.html">Adopta</a> </li>
-        </ul>
-    </main>
- <h1>Libre</h1>   
+            <li><a href="contacta.html">Contacta</a></li>
+            <li><a href="libre.html">Adopta</a></li>
+          </ul>
+        </nav>
+        <section style="border: 1px solid; color: #000">
+          <h2>Sección</h2>
+          <div>
+              <img src="img/gatito.jpg" alt="gato" width="200">
+          </div>
+        </section>
+        <article style="border: 1px solid; color: #000">
+            <h2>Arículo blog</h2>
+        </article>
+        <aside style="border: 1px solid; color: #000">
+            <h2>Aside</h2>
+        </aside>
+        <footer style="border: 1px solid; color: #000">
+            <lul>
+                <li>footer 01</li>
+                <li>footer 02</li>
+                <li>footer 03</li>
+                <li>footer 04</li>
+            </li>
+        </footer>
+      </body>  
 </body>
 </html>
