mas ejercicios css

--- a/bloque css/ejercicios-propiedades.html
+++ b/bloque css/ejercicios-propiedades.html
@@ -32,7 +32,7 @@
       <div>
         <p>
           En el momento en que
-          <span style="text-decoration: underline; color rgb(30, 219, 61)">
+          <span style="text-decoration: underline;color: chartreuse;">
             entiendo verdaderamente
           </span>
           a mi <span style="color: red"> enemigo </span>, en el momento en que
@@ -45,38 +45,18 @@
     </section>
     <section>
       <h1>Exercici 5, fons</h1>
-      <div class="rectangulo">
-        <div>
-          <img
-            src="https://images.unsplash.com/photo-1499988921418-b7df40ff03f9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZGVzZXJ0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"
-            alt=""
-            width="600px"
-            height="200px"
-          />
+      <div>
+        <div class="rectangulo bg1">
+          <p class="centrado">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore rerum sunt, delectus veniam, optio accusamus aliquam qui ad est nesciunt fugit incidunt sapiente. samus aliquam qui ad est nesciunt fugit incidunt sapient </p>
         </div>
-        <div class="rectangulo">
-          <img
-            src="https://images.unsplash.com/photo-1620763050100-37e7074ff710?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmVsdmV0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"
-            alt=""
-            width="600px"
-            height="200px"
-          />
+        <div class="rectangulo bg2">
+          <p class="centrado" id="amarillo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore rerum sunt, delectus veniam, optio accusamus aliquam qui ad est nesciunt fugit incidunt sapiente. samus aliquam qui ad est nesciunt fugit incidunt sapient </p>
         </div>
-        <div class="rectangulo">
-          <img
-            src="https://images.unsplash.com/photo-1573504816327-07f3bf7accac?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bW9zYWljfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"
-            alt=""
-            width="600px"
-            height="200px"
-          />
+        <div class="rectangulo bg3">
+          <p class="centrado" id="blanco">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore rerum sunt, delectus veniam, optio accusamus aliquam qui ad est nesciunt fugit incidunt sapiente. samus aliquam qui ad est nesciunt fugit incidunt sapient </p>
         </div>
-        <div class="rectangulo">
-          <img
-            src="https://images.unsplash.com/photo-1514454529242-9e4677563e7b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8c2t5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"
-            alt=""
-            width="600px"
-            height="200px"
-          />
+        <div class="rectangulo bg4">
+          <p class="centrado" id="granate">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga dolore rerum sunt, delectus veniam, optio accusamus aliquam qui ad est nesciunt fugit incidunt sapiente. samus aliquam qui ad est nesciunt fugit incidunt sapient </p>
         </div>
       </div>
     </section>
