--- a/flexbox/tienda/index.html
+++ b/flexbox/tienda/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+      </style>
+    <script src="https://use.fontawesome.com/08fb09e756.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Tienda flexbox</title>
   </head>
@@ -11,9 +15,22 @@
     <div class="container">
       <header class="header">
         <div class="menu">
-          <div class="logo"></div>
+          <div class="logo">
+            <a href="index.html"><img src="./img/Logo-prov.png" alt=""></a>
+          </div>
           <nav class="nav"></nav>
-          <div class="social"></div>
+          <ul class="ul1">
+            <li class="li1"><a href="#"> Moda </a></li>
+            <li class="li1"><a href="#"> Hogar</a></li>
+            <li class="li1"><a href="#"> Tejidos</a></li>
+            <li class="li1"><a href="#"> About</a></li>
+          </ul>
+          <div class="social">
+            <div> <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a> </div>
+            
+            <div> <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a> </div>
+            <div> <a href="#"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a></div>
+          </div>
         </div>
         <div class="slide">
           <h1></h1>
