avances tienda flexbox

--- a/flexbox/tienda/index.html
+++ b/flexbox/tienda/index.html
@@ -33,15 +33,76 @@
           </div>
         </div>
         <div class="slide">
-          <h1></h1>
+            <a href="#"> <h1>Algodón que cuida del planeta, que cuida de ti.</h1> </a>
+          
         </div>
       </header>
       <section class="section">
         <div class="products">
-          <article class="article"></article>
-          <article class="article"></article>
-          <article class="article"></article>
-          <article class="article"></article>
+          <article class="article">
+              <div class="articleimg"> <a href="#"> <img src="./img/camiseta-mujer.jpg" alt=""> </a> </div>
+              <div class="articletxt">
+                 <h3>Camiseta algodón orgánico · Mujer</h3>
+                 <p>Camiseta de algodón 100% orgánico certificado. Fabricada en Portugal. Sin logos ni marcas.</p>
+                 <h3>45€</h3>
+                <div class="articleboton">
+                  <div class="stock">
+                    <p>En stock</p>
+                  </div>
+                  <button class="button">
+                    <p>comprar</p>
+                  </button>
+                </div>
+              </div>        
+          </article>
+          <article class="article">
+            <div class="articleimg"> <a href="#"> <img src="./img/culotte.jpg" alt=""> </a> </div>
+            <div class="articletxt">
+               <h3>Camiseta algodón orgánico · Mujer</h3>
+               <p>Camiseta de algodón 100% orgánico certificado. Fabricada en Portugal. Sin logos ni marcas.</p>
+               <h3>45€</h3>
+              <div class="articleboton">
+                <div class="stock">
+                  <p>En stock</p>
+                </div>
+                <button class="button">
+                  <p>comprar</p>
+                </button>
+              </div>
+            </div>        
+        </article>
+        <article class="article">
+          <div class="articleimg"> <a href="#"> <img src="./img/sudadera hombre.jpg" alt=""> </a> </div>
+          <div class="articletxt">
+             <h3>Camiseta algodón orgánico · Mujer</h3>
+             <p>Camiseta de algodón 100% orgánico certificado. Fabricada en Portugal. Sin logos ni marcas.</p>
+             <h3>45€</h3>
+            <div class="articleboton">
+              <div class="stock">
+                <p>En stock</p>
+              </div>
+              <button class="button">
+                <p>comprar</p>
+              </button>
+            </div>
+          </div>        
+      </article>
+      <article class="article">
+        <div class="articleimg"> <a href="#"> <img src="./img/Calzoncillo.jpg" alt=""> </a> </div>
+        <div class="articletxt">
+           <h3>Camiseta algodón orgánico · Mujer</h3>
+           <p>Camiseta de algodón 100% orgánico certificado. Fabricada en Portugal. Sin logos ni marcas.</p>
+           <h3>45€</h3>
+          <div class="articleboton">
+            <div class="stock">
+              <p>En stock</p>
+            </div>
+            <button class="button">
+              <p>comprar</p>
+            </button>
+          </div>
+        </div>        
+    </article>
           <nav class="navegation"></nav>
         </div>
         <aside class="aside">
