ultimos cambios tienda flex

--- a/flexbox/tienda/index.html
+++ b/flexbox/tienda/index.html
@@ -50,7 +50,7 @@
                     <p>En stock</p>
                   </div>
                   <button class="button">
-                    <p>comprar</p>
+                    <p>Comprar</p>
                   </button>
                 </div>
               </div>        
@@ -66,7 +66,7 @@
                   <p>En stock</p>
                 </div>
                 <button class="button">
-                  <p>comprar</p>
+                  <p>Comprar</p>
                 </button>
               </div>
             </div>        
@@ -82,7 +82,7 @@
                 <p>En stock</p>
               </div>
               <button class="button">
-                <p>comprar</p>
+                <p>Comprar</p>
               </button>
             </div>
           </div>        
@@ -98,21 +98,48 @@
               <p>En stock</p>
             </div>
             <button class="button">
-              <p>comprar</p>
+              <p>Comprar</p>
             </button>
           </div>
         </div>        
     </article>
-          <nav class="navegation"></nav>
+          <nav class="navegation"> Envíos gratuitos para compras de más de 75€</nav>
         </div>
         <aside class="aside">
-          <div class="banner"></div>
-          <div class="banner"></div>
+          <div class="banner">
+            <img src="./img/Banner/Freshly-01.JPG" alt="">
+          </div>
+          <div class="banner">
+            <img src="./img/Banner/Freshly-02.JPG" alt="">
+          </div>
+          <div class="banner">
+            <img src="./img/Banner/Freshly-01.JPG" alt="">
+          </div>
         </aside>
       </section>
       <footer class="footer">
-        <nav class="footer1"></nav>
-      </footer>
-    </div>
+        <nav class="footer1">
+      <h3>Síguenos</h3>
+        <li>Facebook</li>
+        <li>Instagram</li>
+        <li>Twitter</li>
+    </nav>
+    <nav class="footer1">
+      <h3>Categorías</h3>
+        <li>Camisetas</li>
+        <li>Ropa interior</li>
+        <li>Ropa de casa</li>
+    </nav>
+    <nav class="footer1">
+      <h3>Contacta</h3>
+        <li>Gran Via 333</li>
+        <li>Tel. 657 89 00</li>
+    </nav>
+    <nav class="footer1">
+      <h3>Política de privacidad</h3>
+        <li>Cookies</li>
+        <li>Aviso legal</li>
+    </nav>
+  </footer>
   </body>
 </html>
