cambios en local

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,6 @@
 <h1>Mi primera web </h1>
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
-<p>El primer párrafo</p>
+<p>El primer párrafo cambio en local</p>
 </body>
 </html>
