--- a/bootstrap/bootstrap proves/index.html
+++ b/bootstrap/bootstrap proves/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        padding: 50px;
+      }
+      </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/boots
 trap.min.css"
@@ -12,7 +17,7 @@ trap.min.css"
     />
   </head>
   <body>
-      <h1>Practiquem: Passar a Bootstrap</h1>
+      <h1>1. Practiquem: Passar a Bootstrap</h1>
       <p> Partint del següent codi HTML, feu les modificacions necessàries per tenir una pàgina
         Bootstrap de quatre columnes
         </p>
@@ -57,7 +62,9 @@ trap.min.css"
           numquam minima ex ut.
         </p>
       </div>
-    </div>
+    </div><br>
+    <h1>2. Practiquem: GRID Bootstrap</h1>
+    <p>Realitzar un html amb la següent estructura, fent servir Bootstrap.</p>
     <div class="container">
       <div class="row">
         <div class="col-4" style="border: solid black 1pt">1</div>
@@ -91,8 +98,49 @@ trap.min.css"
       <div class="row">
         <div class="col" style="border: solid black 1pt">1</div>
       </div>
-    </div>
+    </div><br>
+    <h1>3. Practiquem: GRID bootstrap en funció de la pantalla</h1>
+    <p>Tamany gran / mitjà / móbil</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-6" style="border: solid black 1pt">1</div>
+        <div class="col-lg-3 col-md-3 col-6" style="border: solid black 1pt">2</div>
+        <div class="col-lg-3 col-md-3 col-6" style="border: solid black 1pt">3</div>
+        <div class="col-lg-3 col-md-3 col-6" style="border: solid black 1pt">4</div>
+      </div>
+      <div class="row">
+        <div class="col-lg col-md-6" style="border: solid black 1pt">1</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">2</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">3</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">4</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">5</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">6</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">7</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">8</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">9</div>
+        <div class="col-lg col-md-6" style="border: solid black 1pt">10</div>
+      </div>
+     </div><br>
+     <h1>4. Offset</h1>
+     <p>Podem desplaçar les columnes de la quadrícula fent servir la propietat offset. Medium / gran </p>
+     <div class="container">
+        <div class="row">
+          <div class="col-md-6 offset-lg-4" style="border: solid;">1</div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 offset-lg-1" style="border: solid;">1</div>
+        </div>
+        <div class="row">
+          <div class="col-lg-2 col-md-1 offset-md-12" style="border: solid">1</div>
+        </div>
 
+
+
+
+
+
+      
+     </div>
         
 
 
