--- a/javascript/Sintaxi bàsica/03 programa numeros/index.html
+++ b/javascript/Sintaxi bàsica/03 programa numeros/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <head>
-        <title>Exemple Operadors Aritmètics</title>
+        <title>Implementa un programa que comprovi que les dades introduïdes són números.</title>
         </head>
         <body>
             
