--- a/javascript/Sintaxi bàsica/02-Exercici-numeros.html
+++ b/javascript/Sintaxi bàsica/02-Exercici-numeros.html
@@ -9,14 +9,9 @@
 <body>
     <script>
         // Fes un programa per convertir un String nombre a nombre.
-let a=prompt("Escribe una letra");
-new Number(a);
-window.alert(a);
-
-
-
-
-
+let a=10;
+let b=parseInt(a)
+window.alert(b);
     </script>
 </body>
 </html>
