más ejercicios funciones

--- a/javascript/Sintaxi bàsica/15 funciones/03 funciones.html
+++ b/javascript/Sintaxi bàsica/15 funciones/03 funciones.html
@@ -18,6 +18,12 @@ function menor(a, b) {
         
     }  
 }
+//manera de fer-ho amb ternaris
+function menorternari(c,d) {
+    let petit = c < d ? c : d
+    return petit
+    
+}
 //escenari 1
 a=10
 b=5
@@ -27,6 +33,11 @@ console.log(menor(a,b))
 a=2
 b=12
 console.log(menor(a,b))
+
+//escenari 3 ternari
+c=2
+d=12
+console.log(menorternari(c,d))
 
 
     </script>
