--- a/javascript/Sintaxi bàsica/15 funciones/08funciones.html
+++ b/javascript/Sintaxi bàsica/15 funciones/08funciones.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-// 8. Fes una funció que donat un número de DNI, calculi si la lletra és correcta. Tingues
-// present que la lletra del DNI es calcula en dos passos:
-// a. Calcular el mòdul del número del DNI respecte 23
-// b. El resultat de l’operació anterior ha de correspondre a la posició del següent
-// string:
-// var lletres =”TRWAGMYFPDXBNJZSQVHLCKE”;
+      // 8. Fes una funció que donat un número de DNI, calculi si la lletra és correcta. Tingues present que la lletra del DNI es calcula en dos passos:
+      // a. Calcular el mòdul del número del DNI respecte 23
+      // b. El resultat de l’operació anterior ha de correspondre a la posició del següent string:
+      // var lletres =”TRWAGMYFPDXBNJZSQVHLCKE”;
 
+      function calculomodulo(dni) {
+        let modulo = dni % 23;
+        console.log("El modulo del número " + dni + " es " + modulo);
+        let letras = "TRWAGMYFPDXBNJZSQVHLCKE";
+        let letraquetoca = letras.charAt(modulo);
+        console.log("La letra que corresponde es la " + letraquetoca);
+      }
 
+      let dni = 46730234;
+      calculomodulo(dni);
 
     </script>
-    
-</body>
+  </body>
 </html>
