exercicis arrow functions

--- a/javascript/Projecte/indexShop.html
+++ b/javascript/Projecte/indexShop.html
@@ -22,6 +22,16 @@
       buy(5)
       console.table(cart)
 
+      console.log("Ara implementarem una funció que permeti a l'usuari eliminar l’array generat en l'anterior")
+      // cleanCart()
+      // console.log(cart)
+
+      console.log ("subtotal: Com ja tenim una versió bàsica del carret, crearem la funció que calculi els subtotals per a cadascun dels tipus de productes. El subtotal reflectirà l'import, no la quantitat de productes")
+      sumar()
+      console.log(subtotal)
+
+
+
 
 
 
