ejercicios sprint2 y js moderno

--- a/javascript/Projecte/indexShop.html
+++ b/javascript/Projecte/indexShop.html
@@ -15,7 +15,7 @@
       // En primer lloc, com tot e-commerce, farem que l'usuari pugui afegir productes al carret.
       // La funció que has de completar és diu buy(), la qual rep l'id del producte a afegir. Has de buscar el producte utilitzant aquest id rebut en el array products, per a finalment afegir-ho al array cart.
 
-      console.log("Exercici 1. Afegim productes a la cistella de la compra.");
+      console.log("-------------------Exercici 1. Afegim productes a la cistella de la compra.");
 
       buy(1);
       buy(2);
@@ -28,25 +28,28 @@
       // console.log(cartList)
 
       console.log(
-        "subtotal: Com ja tenim una versió bàsica del carret, crearem la funció que calculi els subtotals per a cadascun dels tipus de productes. El subtotal reflectirà l'import, no la quantitat de productes"
+        "---------------Exercici 2. subtotal: Com ja tenim una versió bàsica del carret, crearem la funció que calculi els subtotals per a cadascun dels tipus de productes. El subtotal reflectirà l'import, no la quantitat de productes"
       );
 
-      // subtotal()
+      //subtotal()
       // Com ja tenim una versió bàsica del carret, crearem la funció que calculi els subtotals per a
       // cadascun dels tipus de productes.
       // El subtotal reflectirà l'import, no la quantitat de productes.
-      sumarSubtotal()
-      console.table(subtotal);
+      // sumarSubtotal()
+      // console.table(subtotal);
 
       //Subtotal de forma dinamica
       console.log("forma dinamica");
+      
       sumarSubtotaldinamica()
       console.table(subtotal)
 
-      //calculateTotal() Genial, l'e-commerce va prenent forma! és el moment de calcular el total de l'import del
-// carret. Podràs fer-ho sumant els subtotals de cada categoria de producte calculats en
-// l'exercici anterior.
-// Ha de ser escalable. Imaginat que l'e-commerce creixés i tinguéssim 100 categories! 
+      console.log(" ---------------------Exercici 3. calculateTotal() Calcular el total de l'import del carret. Podràs fer-ho sumant els subtotals de cada categoria de producte calculats en l'exercici anterior. Ha de ser escalable. Imaginat que l'e-commerce creixés i tinguéssim 100 categories!")
+
+// console.log("Calcular el total");
+// calculateTotal()
+// console.table(subtotal)
+
 
     </script>
   </body>
