--- a/javascript/Sintaxi bàsica/18 JS modern/index.html
+++ b/javascript/Sintaxi bàsica/18 JS modern/index.html
@@ -28,6 +28,9 @@ getPelisFromDirector ('Steven Spielberg')
 // Per a tenir més informació d'aquest director, es demana calcular la mitjana de les puntuacions de les seves pel·lícules.
 // Per a això, hauràs d'implementar la funció pelisAverage(), la qual rep un array de pel·lícules i retorna la nota mitjana, amb dos decimals.
 
+let media = pelisAverage("Quentin Tarantino")
+console.log(media.toFixed(2));
+
     </script>
 </body>
 </html>
