exercicis dom i esdeveniments

--- a/javascript/02 DOM/index.html
+++ b/javascript/02 DOM/index.html
@@ -255,5 +255,10 @@
     <script src="js/index04.js"></script>
     <script src="js/index05.js"></script>
     <script src="js/index06.js"></script>
+    <script src="js/index07.js"></script>
+    <script src="js/index08.js"></script>
+    <script src="js/index09.js"></script>
+    <script src="js/esdev01.js"></script>
+    <script src="js/esdev02.js"></script>
 </body>
 </html>
