continuando con Dom propagacion y stop

--- a/javascript/02 DOM/index.html
+++ b/javascript/02 DOM/index.html
@@ -260,5 +260,8 @@
     <script src="js/index09.js"></script>
     <script src="js/esdev01.js"></script>
     <script src="js/esdev02.js"></script>
+    <script src="js/esdev03.js"></script>
+    <script src="js/esdev04.js"></script>
+    <script src="js/esdev05.js"></script>
 </body>
 </html>
